src/_patterns/02-components/bolt-button/src/button.scss
/* ... */
.c-bolt-button--secondary {
  @include bolt-button-secondary;
}



._c-bolt-button--theme-override {
  .t-bolt-xlight &,
  .t-bolt-light & {
    $fallback-background-default: bolt-color(indigo, light);
    $fallback-background-hover: mix($bolt-global-button-hover-color, $fallback-background-default, $bolt-global-button-hover-mix);
    $fallback-background-active: mix($bolt-global-button-active-color, $fallback-background-default, $bolt-global-button-active-mix);

    &,
    &:visited {
      border-color: $fallback-background-default;
      color: bolt-text-contrast($fallback-background-default);
      background-color: $fallback-background-default;
    }

    &:focus,
    &:hover {
      border-color: $fallback-background-hover;
      color: bolt-text-contrast($fallback-background-default);
      background-color: $fallback-background-hover;
    }

    &:active {
      border-color: $fallback-background-active;
      color: bolt-text-contrast($fallback-background-default);
      background-color: $fallback-background-active;
    }
  }
}



.c-bolt-button--success {
  @include bolt-button-color(success);
}

.c-bolt-button--warning {
  @include bolt-button-color(warning);
}

.c-bolt-button--error {
  @include bolt-button-color(error);
}

.c-bolt-button[disabled],
.c-bolt-button--disabled {
  @include bolt-button-color(disabled);
  cursor: not-allowed;
}


// Removing shadows for text buttons

.c-bolt-button--text,
.c-bolt-button--text:before, {
  border-radius: 0;
  box-shadow: none;
}


// Button sizes

.c-bolt-button,
.c-bolt-button--medium {
  @include bolt-padding(medium, squished);
  @include bolt-font-size(xsmall);

  &.c-bolt-button--icon-only {
    padding: bolt-spacing(medium);
  }
}

.c-bolt-button--xxsmall {
  @include bolt-padding(xxsmall, squished);
  @include bolt-font-size(xsmall);

  &.c-bolt-button--icon-only {
    padding: bolt-spacing(xxsmall);
  }
}

.c-bolt-button--xsmall {
  @include bolt-padding(xsmall, squished);
  @include bolt-font-size(xsmall);

  &.c-bolt-button--icon-only {
    padding: bolt-spacing(xsmall);
  }
}

.c-bolt-button--small {
  @include bolt-padding(small, squished);
  @include bolt-font-size(xsmall);

  &.c-bolt-button--icon-only {
    padding: bolt-spacing(small);
  }
}

.c-bolt-button--large {
  @include bolt-padding(medium, squished);
  @include bolt-font-size(medium);

  &.c-bolt-button--icon-only {
    padding: bolt-spacing(medium);
  }
}

.c-bolt-button--xlarge {
  @include bolt-padding(large, squished);
  @include bolt-font-size(large);

  &.c-bolt-button--icon-only {
    padding: bolt-spacing(large);
  }
}


// Button widths

.c-bolt-button--full {
  width: 100%;
}

.c-bolt-button--rounded,
.c-bolt-button--rounded:before {
  border-radius: 50%;
}

.c-bolt-button--full\@small {
  @media screen and (max-width: map-get($bolt-breakpoints, small)) {
    width: 100%;
  }
}


// Button items

.c-bolt-button--item-align-center {
  @supports (display: flex) {
    justify-content: center;
  }
  text-align: center;
}

.c-bolt-button--item-align-start {
  @supports (display: flex) {
    justify-content: flex-start;
  }
  text-align: left;
}

.c-bolt-button__item {
  display: inline-flex;
  align-self: center;
}

.c-bolt-button__button {
  -webkit-appearance: none;
  background-color: transparent;
  border: 0;
  font-weight: inherit;
  font-size: inherit;
  font-family: inherit;
  cursor: inherit;
  outline: 0;
  padding: 0;
  display: inline-flex; // vertical alignment w/ icon only button
}

.c-bolt-link__text + .c-bolt-link__icon,
.c-bolt-button__item-text + .c-bolt-button__icon {
  @include bolt-margin-left(xxsmall);
}

.c-bolt-link__icon,
.c-bolt-button__icon {
  display: inline-block;
  display: inline-flex;
  vertical-align: middle;
  align-self: center;
  line-height: 1; // workaround so icons can be vertically aligned properly
}

.c-bolt-link__icon + .c-bolt-link__text,
.c-bolt-button__icon + .c-bolt-button__item-text {
  @include bolt-margin-left(xsmall);
}


// Links

.c-bolt-link {
  @include bolt-reset-button-styles;
  display: inline-block;
  display: inline-flex; //So icons are vcentered
  text-decoration: underline;
  transition: all $bolt-button-transition;
}



.c-bolt-button--text {
  text-decoration: none;
  border-color: transparent;
  background-color: transparent;
  $bolt-theme-link-default: bolt-color(indigo, light);

  & {
    opacity: 1;
    color: currentColor;

    @supports(--css: variables) {
      color: var(--bolt-theme-heading-link-default, inherit);
    }
  }

  &:visited {
    opacity: 1;
    color: currentColor;

    @supports(--css: variables) {
      color: var(--bolt-theme-heading-link-visited, inherit);
    }
  }


  &:focus,
  &:hover {
    opacity: $bolt-global-link-hover-opacity;

    @supports(--css: variables) {
      opacity: 1;
      color: var(--bolt-theme-heading-link-hover, inherit);
    }
  }

  &:active {
    opacity: $bolt-global-link-active-opacity;

    @supports(--css: variables) {
      opacity: 1;
      color: var(--bolt-theme-heading-link-active, inherit);
    }
  }
}




.c-bolt-link--headline {
  cursor: pointer;
  text-decoration: none;
  color: inherit;
  color: var(--bolt-theme-heading-link-default, --bolt-theme-text);
}

.c-bolt-link--headline:hover {
    color: inherit;
    text-decoration: underline;
    color: var(--bolt-theme-heading-link-hover, --bolt-theme-text);
  }

.c-bolt-link--headline:active {
  color: inherit;
  color: var(--bolt-theme-heading-link-active, --bolt-theme-text);
}

.c-bolt-link--headline:visited {
  color: inherit;
  color: var(--bolt-theme-heading-link-visited, --bolt-theme-text);
}
/* ... */

